<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>

    <string name="app_name">bloodDonbeta</string>
    <string name="action_settings">Settings</string>

    <string name="anim_duration_long">1000</string>


    <string name="facebook_app_id">160818434602399</string>
    <string name="fb_login_protocol_scheme">160818434602399</string>


    <string name="title_activity_settings">Settings</string>


    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_fullName">My name</string>
    <string name="key_fullName">key_fullName"</string>
    <string name="title_fullName">Full Name</string>


    <string name="dialogTitle_bloodType">Choose Blood type</string>
    <string name="title_bloodType">Blood type </string>
    <string name="key_bloodType">key_bloodType</string>
    <string name="defaultValue_bloodType">O -</string>


    <string name="key_birthday">key_birthday</string>
    <string name="title_Birthday">Birthday </string>
    <string name="default_birthday">19/01/1997</string>
    <string name="summary_birthday">19/01/1997</string>


    <string name="dialogTitle_gender">Choose your gender</string>
    <string name="key_gender">key_gender</string>
    <string name="title_gender"> Gender </string>


    <string name="error">Error</string>
    <string name="options">Options</string>
    <string name="clear_messages">Clear Messages</string>
    <string name="send_picture">Send Picture</string>


    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="title_activity_chat">ChatActivity</string>
</resources>
