<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:holo="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="General">
        <EditTextPreference
            android:defaultValue="@string/default_fullName"
            android:key="@string/key_fullName"
            android:summary="@string/default_fullName"
            android:title="@string/title_fullName" />

        <ListPreference
            android:defaultValue="Male"
            android:dialogTitle="@string/dialogTitle_gender"
            android:entries="@array/gender_entries"
            android:entryValues="@array/gender_values"
            android:key="@string/key_gender"
            android:summary="Male"
            android:title="@string/title_gender" />


        <ListPreference
            android:defaultValue="O -"
            android:dialogTitle="@string/dialogTitle_bloodType"
            android:entries="@array/bloodType_entries"
            android:entryValues="@array/bloodType_values"
            android:key="@string/key_bloodType"
            android:summary="@string/defaultValue_bloodType"
            android:title="@string/title_bloodType" />



        <fr.blooddonbeta.DatePreference
            android:key="@string/key_birthday"
            android:title="@string/title_Birthday"
            android:defaultValue="@string/default_birthday"
            android:summary="@string/summary_birthday"/>





    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/notifications_new_message"
            android:title="@string/title_new_notification_sound" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="@string/key_notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:summary="@string/summary_choose_ringtone"
            android:title="@string/pref_title_ringtone" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_vibrate"
            android:summary="@string/summary_vibrate"
            android:title="@string/title_vibrate" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        <!-- preference opens url in browser -->
        <Preference
            android:summary="@string/summary_faq"
            android:title="@string/title_faq">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_faq" />
        </Preference>

        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy" />
        </Preference>

        <Preference android:title="@string/title_terms">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_terms" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>